; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_mktime.c__mkgmtime.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_mktime.c__mkgmtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@MAX_32BIT_TIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_mkgmtime(%struct.tm* %0) #0 {
  %2 = alloca %struct.tm*, align 8
  %3 = alloca i32, align 4
  store %struct.tm* %0, %struct.tm** %2, align 8
  %4 = load %struct.tm*, %struct.tm** %2, align 8
  %5 = call i32 @mktime_worker(%struct.tm* %4, i32 1)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @MAX_32BIT_TIME, align 4
  %8 = icmp sgt i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  br label %12

12:                                               ; preds = %10, %9
  %13 = phi i32 [ -1, %9 ], [ %11, %10 ]
  ret i32 %13
}

declare dso_local i32 @mktime_worker(%struct.tm*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
